add title and icon

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Digital Solutions</title>
     <link rel="stylesheet" href="scss/main.css">
+    <link rel="icon" href="https://cdn.iconscout.com/icon/free/png-256/free-solution-1528197-1297645.png">
 </head>
 <body>
     <div class="home-bgImg-container">
